<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_header"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/darkest_blue"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:tint="@color/white" />

        <com.iBring_user.app.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/menu_coupon"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_15sdp"
        card_view:cardCornerRadius="@dimen/_1sdp"
        card_view:cardElevation="@dimen/_3sdp">


        <LinearLayout
            android:id="@+id/add_money_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.iBring_user.app.Utils.ClanProTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_coupon_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone" />

                <com.iBring_user.app.Utils.ClanProEditText
                    android:id="@+id/coupon_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@drawable/review_bg_new"
                    android:hint="COUPON CODE"
                    android:inputType="textCapCharacters"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:textColor="@color/btn_color"
                    android:elevation="0dp"
                    android:textColorHint="@color/user_name"
                    android:textSize="@dimen/_12ssp"/>

                <com.iBring_user.app.Utils.ClanProButton
                    android:id="@+id/apply_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_background"
                    android:elevation="@dimen/_10sdp"
                    android:text="@string/apply"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout

        android:id="@+id/cardListViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.iBring_user.app.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/added_coupon"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_12ssp" />


            <ListView
                android:id="@+id/coupon_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrNoDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/coupon_gift" />

            <com.iBring_user.app.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="There is no coupon added"
                android:textColor="@color/darkest_blue"
                android:textSize="@dimen/_12ssp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
