<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_header"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/darkest_blue"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:tint="@color/white" />

        <com.iBring_user.app.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/menu_wallet"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/wallet_bg_icon" />

        <com.iBring_user.app.Utils.ClanProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/wallet_balance"
            android:textColor="@color/darkest_blue"
            android:textSize="14sp" />

        <com.iBring_user.app.Utils.ClanProTextView
            android:id="@+id/balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/default_amount"
            android:textColor="@color/darkest_blue"
            android:textSize="25sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_money_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:elevation="@dimen/_15sdp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <com.iBring_user.app.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_money"
                android:textColor="@color/darkest_blue"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/review_bg_new"
                    android:orientation="horizontal">

                    <com.iBring_user.app.Utils.ClanProTextView
                        android:id="@+id/currencySymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:gravity="center|right"
                        android:text="$"
                        android:textSize="22sp"
                        android:layout_marginLeft="8dp"
                        android:visibility="visible"/>

                    <com.iBring_user.app.Utils.ClanProEditText
                        android:id="@+id/money_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="left|center"
                        android:inputType="number"
                        android:text=""
                        android:digits="0123456789"
                        android:layout_marginLeft="10dp"
                        android:hint="ADD MONEY"
                        android:maxLength="4"
                        android:background="@android:color/transparent"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColorHint="@color/user_name"
                        android:textColor="@color/btn_color"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >

                    <com.iBring_user.app.Utils.ClanProButton
                        android:id="@+id/add_fund_button"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/blue_background"
                        android:elevation="@dimen/_10sdp"
                        android:text="@string/add_money"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"

                android:orientation="horizontal">

                <com.iBring_user.app.Utils.ClanProButton
                    android:id="@+id/one"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.1"
                    android:background="@drawable/review_bg_money"
                    android:text=""
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />

                <Space
                    android:layout_width="3dp"
                    android:layout_height="wrap_content" />

                <com.iBring_user.app.Utils.ClanProButton
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.1"
                    android:background="@drawable/review_bg_money"
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />

                <Space
                    android:layout_width="3dp"
                    android:layout_height="wrap_content" />

                <com.iBring_user.app.Utils.ClanProButton
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/review_bg_money"
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
